# smoodle

./: .gitignore  .yamllint  CLAUDE.md  INSTALL.md  LICENSE  README.md  TODOS.md
.github/workflows/: build-config-app.yml  ci.yml  (+4 more)
.planning/: DECISION-GATE.md  INTEGRATION-CHECK-v0.0.6.md  PROJECT.md  REQUIREMENTS.md  RESUME-v0.0.8.md  ROADMAP.md  SOAK-LEDGER-v0.0.7.md  STATE.md  config.json  v0.0.6-MILESTONE-AUDIT.md
config-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
config-app/src-tauri/: Cargo.toml  tauri.conf.json
config-app/src-tauri/src/: lib.rs  main.rs  yaml.rs
config-app/src-tauri/src/commands/: deploy.rs  mod.rs  settings.rs  status.rs  telemetry.rs  user_dict.rs
config-app/src-tauri/tests/: deploy.rs  settings.rs  status.rs  telemetry.rs  user_dict.rs  yaml.rs
docs/: CI-REFACTOR-PROMPT.md  DECISION-GATE-CRITERIA-v0.0.7.md  DECISION-GATE-CRITERIA-v0.0.8.md  DECISION-GATE-CRITERIA.md  LANE-B-HARDENING-PROMPT.md  LANE-B-WINDOWS.md  LANE-C-E2E-PROMPT.md  LANE-C-LINUX.md  PHASE1-PROMPT.md  RECRUIT-OUTREACH-DRAFTS.md  RELEASE-CHECKLIST.md  RESUME.md
schema/: default.custom.yaml  thai_phonetic.dict.yaml  thai_phonetic.schema.yaml
scripts/: build-macos-dmg.sh  dev-sync-windows.sh  generate_dict.py  generate_words.py  generated-500.tsv  generated-example.tsv  generated-tnc-full.tsv  generated-tnc.tsv  init_rime_testdir.sh  install-librime-fork.ps1  install-librime-fork.sh  install-linux.sh  install-windows.ps1  install.sh  merge_dict.py  verify-librime.ps1  verify-librime.sh  words-500.txt  words-example.txt  words-tnc-full.txt  words-tnc.txt
tests/: algebra_fixture.yaml  test_dict.py  test_install_e2e_mac.sh  test_install_e2e_win.ps1  test_install_librime_fork_mac.py  test_install_librime_fork_win.py  test_installers.py  test_powershell_ascii.py  test_schema_lint.py  test_telemetry.py  test_verify_librime_mac.py  test_verify_librime_win.py  v001_fixture.yaml  v01_fixture.yaml
(+71 files in other folders)
