[package]
name = "app"
version = "0.0.8"
description = "Smoodle Config — settings GUI for Smoodle Thai phonetic IME"
authors = ["Apinant U-suwantim <apinant.usu@gmail.com>"]
license = "MIT"
repository = "https://github.com/smoodle-type/smoodle"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "smoodle_config_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
thiserror = "1"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[dev-dependencies]
